--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,16 +5,36 @@
     background-image: url('../svg/footer-100.svg');
 
     display: flex;
-    justify-content: start;
+    flex-direction: column-reverse;
 
     min-height: 100px;
-    padding-top: .5rem;
+    padding: 1rem;
 
     clip-path: polygon(100% 100%, 0 100%, 0 25%, 30% 25%, 35% 0, 100% 0);
     
     @media screen and (min-width: 768px) {
       background-image: url('../svg/footer-125.svg');
       min-height: 125px;
+      clip-path: polygon(100% 100%, 0 100%, 0 25%, 65% 25%, 70% 0, 100% 0);
+    }
+  }
+}
+
+footer {
+  & a.copyright {
+    display: flex;
+    align-items: center;
+    gap: .75rem;
+    filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.5));
+
+    font-size: 1.25rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-decoration: none;
+    color: var(--light-text);
+    transition: color 0.5s ease-in-out;
+
+    &:hover {
+      color: black;
     }
   }
 }
