--- a/src/css/pokedex-entry.css
+++ b/src/css/pokedex-entry.css
@@ -37,35 +37,38 @@
   background: linear-gradient(0deg, var(--blue-1) 40%, var(--blue-2) 80%);
   display: flex;
   margin: 0 1rem;
-  padding: 1.25rem;
+  padding: 0;
   height: 100%;
   max-width: 475px;
   z-index: 16;
 
-  overflow-y: auto;
+  & .details {
+    padding: 1.25rem;
+    overflow-y: auto;
 
-  & .top-row {
-    display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    justify-items: center;
-    align-items: baseline;
-    margin-bottom: 1rem;
-  }
-
-  & .close {
-    justify-self: end;
-    align-self: self-start;
-    cursor: pointer;
-
-    & svg {
-      width: 2rem;
-      color: var(--teal-1);
-      transition: color 0.5s, filter 0.5s;
-      /* filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.5)); */
-
-      &:hover {
-        color: var(--teal-2);
-        filter: drop-shadow(0 2px 2px rgba(255, 255, 255, 0.5));
+    & .top-row {
+      display: grid;
+      grid-template-columns: 1fr 2fr 1fr;
+      justify-items: center;
+      align-items: baseline;
+      margin-bottom: 1rem;
+    }
+  
+    & .close {
+      justify-self: end;
+      align-self: self-start;
+      cursor: pointer;
+  
+      & svg {
+        width: 2rem;
+        color: var(--teal-1);
+        transition: color 0.5s, filter 0.5s;
+        /* filter: drop-shadow(0 1px 1px rgba(0, 0, 0, 0.5)); */
+  
+        &:hover {
+          color: var(--teal-2);
+          filter: drop-shadow(0 2px 2px rgba(255, 255, 255, 0.5));
+        }
       }
     }
   }
