--- a/src/css/pokedex.css
+++ b/src/css/pokedex.css
@@ -1,11 +1,20 @@
 .pokedex {
   display: flex;
   flex-direction: column;
+  margin-bottom: 1rem;
+
+  & .frame:last-child {
+    margin-bottom: 0;
+  }
 
   @media screen and (min-width: 768px) {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
+
+    & .frame {
+      margin-bottom: 0;
+    }
   }
 
   @media screen and (min-width: 1024px) {
